--- a/src/test/java/com/emirates/utils/constants.properties
+++ b/src/test/java/com/emirates/utils/constants.properties
@@ -1,5 +1,88 @@
 #All Constants
+appiumUrl=http://127.0.0.1:4723/wd/hub
+MyLenovoK4NoteDeviceName=Q4IJFYGYSKHU8SJZ
+MyLenovoK4NotePlatformName=Android
+MyLenovoK4NotePlatformVersion=5.1
+
+slendroidAppPackage=io.selendroid.testapp
+slendroidAppActivity=io.selendroid.testapp.HomeScreenActivity
+
+testApk=selendroid-test-app-0.17.0.apk
+
+testDataName=Test!@#_User
+
+testEmulatorDeviceName=Android Emulator
+testEmulatorPlatformName=Android
+testEmulatorPlatformVersion=4.1.2
 
 #All XPATHS
+allCarsOnWebView=.//*[@respurce-id="android:id/custom"]
+enterNameOnWebwiew=.//*[@content-desc="Enter your name here!"]
+nameDisplayedOnWebView=.//@[@class="android.view.View"]
+selectCarOnWebView=.//*[@content-desc="Volvo"]
+sendButtonOnWebView=.//*[@content-desc="Send me your name!"]
 uname=.//*[contains(@content-desc, 'buttonStartWebviewCD')]
 #ALL IDs
+
+
+
+#        MobileElement paswd = driver.findElementById(".//*[@text='Username or email']");
+#        paswd.sendKeys("Nana@1234"); 
+#        driver.hideKeyboard();
+#        app_methods.wait(100);
+#        MobileElement els = driver.findElementByXPath(".//*[@text='Sign in']");
+#        els.click();
+#        Thread.sleep(5000);
+#        
+#        MobileElement clickhome = driver.findElementsById("org.wordpress.android:id/tab_icon").get(0);
+#        clickhome.click();
+#        
+#        MobileElement mysite = driver.findElementById("org.wordpress.android:id/my_site_view_site_text_view");
+#        mysite.click();
+#        
+#        app_methods.wait(5000);
+#        
+#        app_methods.switchToWebView();
+#        app_methods.wait(1000);
+#        
+#        MobileElement clickshow= driver.findElementByXPath("//*[@id='masthead']/button/span");
+#        clickshow.click();
+#        app_methods.wait(2000);
+#        
+#        app_methods.switchToNativeApp();
+#        app_methods.wait(1000);
+#        
+#        MobileElement navigate_up=driver.findElementByAccessibilityId("Navigate up");
+#        navigate_up.click();
+#        app_methods.wait(2000);
+#        
+#        MobileElement clickme = driver.findElementsById("org.wordpress.android:id/tab_icon").get(2);
+#        clickme.click();
+#        
+#        MobileElement disconnect = driver.findElementById("org.wordpress.android:id/me_login_logout_text_view");
+#        disconnect.click();
+#        
+#        MobileElement logout = driver.findElementById("android:id/button1");
+#        logout.click();
+#        
+#        Thread.sleep(2000);
+
+#		File directory = new File ("./build");
+#		File app=new File(directory,"selendroid-test-app-0.17.0.apk");
+#		
+#		DesiredCapabilities capabilities = new DesiredCapabilities();
+#		capabilities.setCapability(MobileCapabilityType.PLATFORM_NAME, "Android");
+#		capabilities.setCapability(MobileCapabilityType.PLATFORM_VERSION, "4.1.2");
+#		capabilities.setCapability(MobileCapabilityType.DEVICE_NAME, "Android Emulator");
+#		capabilities.setCapability(MobileCapabilityType.APP, app);
+#		
+#		capabilities.setCapability("appPackage", "io.selendroid.testapp");
+#		capabilities.setCapability("appActivity","io.selendroid.testapp.HomeScreenActivity");
+#		
+#		driver = new AppiumDriver<MobileElement>(new URL("http://127.0.0.1:4728/wd/hub"), capabilities);
+#		driver.manage().timeouts().implicitlyWait(70, TimeUnit.SECONDS);
+
+#	public Utils(AppiumDriver<MobileElement> driver) 
+#	{
+#		this.driver = driver;
+#	}
